syntax = "proto3";

package cordum.v1;
option go_package = "github.com/cordum/cordum/sdk/gen/go/cordum/v1";

enum ContextMode {
  CONTEXT_MODE_UNSPECIFIED = 0;
  CONTEXT_MODE_RAW = 1;
  CONTEXT_MODE_CHAT = 2;
  CONTEXT_MODE_RAG = 3;
}

service ContextEngine {
  rpc BuildWindow(BuildWindowRequest) returns (BuildWindowResponse);
  rpc UpdateMemory(UpdateMemoryRequest) returns (UpdateMemoryResponse);
}

message ModelMessage {
  string role = 1;
  string content = 2;
}

message BuildWindowRequest {
  string memory_id = 1;
  ContextMode mode = 2;
  string model = 3;
  bytes logical_payload = 4;
  int32 max_input_tokens = 5;
  int32 max_output_tokens = 6;
}

message BuildWindowResponse {
  repeated ModelMessage messages = 1;
  int32 input_tokens = 2;
  int32 output_tokens = 3;
}

message UpdateMemoryRequest {
  string memory_id = 1;
  bytes logical_payload = 2;
  bytes model_response = 3;
  ContextMode mode = 4;
}

message UpdateMemoryResponse {}
